# building-a-blockchain

./: README.md
ch02_hashing/funcoin/: pyproject.toml
ch02_hashing/funcoin/funcoin/: hashing_emails.py  hashing_files.py  hashing_strings.py
ch03_blockchains/basic_blockchain/: pyproject.toml
ch03_blockchains/basic_blockchain/basic_blockchain/: block_example.py  blockchain.py
ch04_proof_of_work/pow_blockchain/: pyproject.toml
ch04_proof_of_work/pow_blockchain/pow_blockchain/: blockchain.py  trivial_example.py
ch05_networking/asyn_chat_server/: pyproject.toml
ch05_networking/asyn_chat_server/asyn_chat_server/: async_example.py  chat_server.py
ch06_cryptography/cryptography_101/: pyproject.toml
ch06_cryptography/cryptography_101/cryptography_101/: private_key.py  public_key.py  shared_secret.py  signing_doc.py
ch07_transactional_node/funcoin/: node.py  pyproject.toml
ch07_transactional_node/funcoin/funcoin/: blockchain.py  connections.py  peers.py  server.py
