[tool.poetry]
name = "funcoin"
version = "0.1.0"
description = ""
authors = ["mindeleven <mindeleven@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pynacl = "^1.5.0"
structlog = "^24.4.0"
colorama = "^0.4.6"
marshmallow = "^3.22.0"
marshmallow-oneofschema = "^3.1.1"
aiohttp = "^3.10.5"
more-itertools = "^10.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
